--- a/MyApplication/app/src/main/res/layout/act_barrage_animation.xml
+++ b/MyApplication/app/src/main/res/layout/act_barrage_animation.xml
@@ -17,6 +17,14 @@
         android:layout_height="match_parent"
         android:visibility="visible">
 
+        <FrameLayout
+            android:id="@+id/barrageFL"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="108dp">
+
+        </FrameLayout>
+
 
         <ImageView
             android:id="@+id/close_icon"
