--- a/MyApplication/app/src/main/res/layout/act_barrage_animation.xml
+++ b/MyApplication/app/src/main/res/layout/act_barrage_animation.xml
@@ -16,6 +16,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="visible">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#b3000000"/>
 
         <FrameLayout
             android:id="@+id/barrageFL"
