--- a/MyApplication/app/src/main/res/layout/act_canvas.xml
+++ b/MyApplication/app/src/main/res/layout/act_canvas.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.gaofei.app.widget.TaskPathView xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</com.gaofei.app.widget.TaskPathView>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.gaofei.app.widget.TaskPathView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </com.gaofei.app.widget.TaskPathView>
+    </RelativeLayout>
+</android.support.v4.widget.NestedScrollView>
