--- a/MyApplication/app/src/main/res/layout/task_treasure_box_icon.xml
+++ b/MyApplication/app/src/main/res/layout/task_treasure_box_icon.xml
@@ -3,31 +3,46 @@
     android:layout_width="@dimen/task_treasure_box_icon_width"
     android:layout_height="@dimen/task_treasure_box_icon_height">
 
-    <View
-        android:layout_width="116dp"
-        android:layout_height="116dp"
-        android:background="@drawable/task_box_background_bg" />
-
-    <ImageView
+    <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@drawable/task_box_lock_color" />
+        android:layout_height="wrap_content">
+
+        <View
+            android:layout_width="116dp"
+            android:layout_height="116dp"
+            android:background="@drawable/task_box_background_bg" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/task_box_lock_color" />
+
+        <View
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_gravity="center"
+            android:background="@color/black" />
+    </FrameLayout>
+
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:layout_gravity="bottom"
+        android:visibility="visible"
         android:background="@drawable/task_box_des_bg">
 
         <TextView
             android:layout_width="102dp"
             android:layout_height="28dp"
-            android:background="@drawable/task_box_des_text_bg"
             android:layout_gravity="center"
-            android:textSize="13dp"
+            android:background="@drawable/task_box_des_text_bg"
             android:gravity="center"
+            android:text="打开知识宝箱"
             android:textColor="#FF585F78"
-            android:text="打开知识宝箱"/>
+            android:textSize="13dp" />
     </FrameLayout>
+
+
 </FrameLayout>
