--- a/MyApplication/app/src/main/res/layout/act_exception.xml
+++ b/MyApplication/app/src/main/res/layout/act_exception.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <Button
         android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="exception"/>
-</RelativeLayout>
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:background="@color/yc_red4"/>
+    <Button
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        app:layout_editor_absoluteX="20dp"
+        app:layout_editor_absoluteY="20dp"
+        android:background="@color/yc_blue4"/>
+</android.support.constraint.ConstraintLayout>
