--- a/MyApplication/app/src/main/res/layout/task_treasure_box_icon.xml
+++ b/MyApplication/app/src/main/res/layout/task_treasure_box_icon.xml
@@ -13,6 +13,7 @@
             android:background="@drawable/task_box_background_bg" />
 
         <ImageView
+            android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -34,6 +35,7 @@
         android:background="@drawable/task_box_des_bg">
 
         <TextView
+            android:id="@+id/name"
             android:layout_width="102dp"
             android:layout_height="28dp"
             android:layout_gravity="center"
