--- a/MyApplication/app/src/main/res/values/dimens.xml
+++ b/MyApplication/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="task_treasure_box_icon_width">116dp</dimen>
     <dimen name="task_treasure_box_icon_height">124dp</dimen>
+    <dimen name="new_task_root_width">360dp</dimen>
+    <dimen name="new_task_root_height">992dp</dimen>
 </resources>
