--- a/MyApplication/app/src/main/res/layout/act_canvas.xml
+++ b/MyApplication/app/src/main/res/layout/act_canvas.xml
@@ -10,7 +10,8 @@
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:visibility="visible">
 
         <com.gaofei.app.widget.TaskFrameLayout
             android:id="@+id/fl"
@@ -354,4 +355,21 @@
             android:textSize="12sp"
             tools:text="40/100" />
     </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:orientation="horizontal">
+
+        <com.gaofei.app.task.OilTableLine
+
+            android:layout_width="100dp"
+            android:layout_height="100dp" />
+
+        <com.gaofei.app.task.OilTableLine1
+            android:layout_width="100dp"
+            android:layout_height="100dp" />
+    </LinearLayout>
 </FrameLayout>
